Add initial cv website files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Lohita</title>
-  <link rel="icon" href="C:\Users\lohit\OneDrive\Desktop\web development\HTML-Personal site\Lohita File\circle-cropped (2).png">
+  <link rel="icon" href="circle-cropped (2).png">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="C:\Users\lohit\OneDrive\Desktop\web development\HTML-Personal site\Lohita File\Professional image1 (3).jpg" alt="My Photos">
+        <img src="Professional image1 (3).jpg" alt="My Photos">
       </td>
       <td>
         <!-- <span style="background-color:#e6adfe;"> Lohita Sai Palathirthapu </span> -->
@@ -117,7 +117,7 @@
     </tr>
   </table>
 <br>
-<a href="C:\Users\lohit\OneDrive\Desktop\web development\HTML-Personal site\Lohita File\tut8.html" target="_blank">Review</a>
+<a href="tut8.html" target="_blank">Review</a>
 </body>
 
 </html>
