Add initial cv website files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="Professional image1 (3).jpg" alt="My Photos">
+        <img src="circle-cropped (4).png" alt="My Photos">
       </td>
       <td>
         <!-- <span style="background-color:#e6adfe;"> Lohita Sai Palathirthapu </span> -->
